[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["async-read-body"] }
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
pulldown-cmark = "0.11"
